--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav
         data-hx-trigger="load"
         data-hx-swap="outerHTML"
-        data-hx-get="global.headerF.partial.html"
+        data-hx-get="global.header.hero.partial.html"
       ></nav>
     </header>
     <main class="main">
