--- a/global.footer.partial.html
+++ b/global.footer.partial.html
@@ -1,8 +1,8 @@
 <div class="footer">
-  <div class="footer-menu">
-    <div class="menu-pages">
+  <div class="footer__menu">
+    <div class="footer__menu-pages">
       <h3>Pages</h3>
-      <ul class="menu-pages-list">
+      <ul class="footer__menu-pages-list">
         <li>Home</li>
         <li>Product</li>
         <li>Pricing</li>
@@ -10,9 +10,9 @@
         <li>Contact</li>
       </ul>
     </div>
-    <div class="menu-tomothy">
+    <div class="footer__menu-tomothy">
       <h3>Tomothy</h3>
-      <ul class="menu-tomothy-list">
+      <ul class="footer__menu-tomothy-list">
         <li>Eleanor Edwards</li>
         <li>Ted Robertson</li>
         <li>Annette Russell</li>
@@ -20,9 +20,9 @@
         <li>Gloria Richards</li>
       </ul>
     </div>
-    <div class="menu-jane-black">
+    <div class="footer__menu-jane-black">
       <h3>Jane Black</h3>
-      <ul class="menu-jane-black-list">
+      <ul class="footer__menu-jane-black-list">
         <li>Philip Jones</li>
         <li>Product</li>
         <li>Colleen Russell</li>
@@ -31,8 +31,8 @@
       </ul>
     </div>
   </div>
-  <div class="footer-connection">
-    <div class="footer-row-address">
+  <div class="footer__connection">
+    <div class="footer__connection-row-address">
       <svg
         width="46"
         height="46"
@@ -51,7 +51,7 @@
       </svg>
       <p>7480 Mockingbird Hill undefined</p>
     </div>
-    <div class="footer-row-phone">
+    <div class="footer__connection-row-phone">
       <svg
         width="21"
         height="33"
@@ -66,7 +66,7 @@
       </svg>
       <p>(239) 555-0108</p>
     </div>
-    <div class="footer-row-social">
+    <div class="footer__connection-row-social">
       <svg
         width="34"
         height="28"
