--- a/index.section-contacts.partial.html
+++ b/index.section-contacts.partial.html
@@ -1,12 +1,12 @@
 <div class="contacts">
-  <div class="contacts-text-content">
+  <div class="contacts__text">
     <h2>Contact Us</h2>
     <h4>
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
   </div>
-  <div class="contacts-row-content">
-    <div class="contacts-content-form">
+  <div class="contacts__row-content">
+    <div class="contacts__row-content-form">
       <h3>Contact Us</h3>
       <input type="text" name="name" id="name" placeholder="Your Name" />
       <input type="text" name="email" id="email" placeholder="Your Email" />
@@ -18,9 +18,9 @@
       />
       <button>Send</button>
     </div>
-    <div class="contacts-row-content-address">
-      <div class="contacts-address-items">
-        <div class="contacts-items-place">
+    <div class="contacts__row-content-address">
+      <div class="contacts__address-items">
+        <div class="contacts__items-place">
           <svg
             width="26"
             height="32"
@@ -48,7 +48,7 @@
             6386 Spring St undefined Anchorage, Georgia 12473 United States
           </h6>
         </div>
-        <div class="contacts-items-phone">
+        <div class="contacts__items-phone">
           <svg
             width="21"
             height="33"
@@ -63,7 +63,7 @@
           </svg>
           <h6>(843) 555-0130</h6>
         </div>
-        <div class="contacts-items-email">
+        <div class="contacts__items-email">
           <svg
             width="27"
             height="21"
@@ -79,10 +79,10 @@
           <h6>willie.jennings@example.com</h6>
         </div>
       </div>
-      <div class="contacts-address-map">
+      <div class="contacts__address-map">
         <img src="img/contacts-map-screen.png" alt="Contacts map" />
       </div>
-      <div class="contacts-address-social">
+      <div class="contacts__address-social">
         <div class="twitter">
           <svg
             width="34"
