--- a/index.section-features.partial.html
+++ b/index.section-features.partial.html
@@ -1,13 +1,13 @@
 <div class="features">
-  <div class="features-text-contetn">
+  <div class="features__text-center">
     <h2>Features</h2>
     <h4>
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
   </div>
 
-  <div class="row">
-    <div class="fonts">
+  <div class="features__text-row">
+    <div class="features__text-row-fonts">
       <svg
         width="46"
         height="46"
@@ -26,7 +26,7 @@
         financial goal.
       </p>
     </div>
-    <div class="design">
+    <div class="features__text-row-design">
       <svg
         width="45"
         height="42"
@@ -46,7 +46,7 @@
         financial goal.
       </p>
     </div>
-    <div class="fastest">
+    <div class="features__text-row-fastest">
       <svg
         width="49"
         height="46"
@@ -66,7 +66,7 @@
       </p>
     </div>
   </div>
-  <div class="video-screen">
+  <div class="features__video-screen">
     <svg
       width="1304"
       height="785"
