--- a/index.section-lightning-fast-prototyping.partial.html
+++ b/index.section-lightning-fast-prototyping.partial.html
@@ -1,5 +1,5 @@
-<div class="lightning-fast-prototyping">
-  <div class="lightning-photo-container">
+<div class="lightning">
+  <div class="lightning__photo-container">
     <svg
       width="677"
       height="514"
@@ -340,12 +340,12 @@
       </defs>
     </svg>
   </div>
-  <div class="lightning-text-container">
-    <div class="lightning-text-content">
+  <div class="lightning__text-container">
+    <div class="lightning__text-content">
       <h3>At your fingertips</h3>
       <h2>Lightning fast prototyping</h2>
     </div>
-    <div class="lightning-action-content">
+    <div class="lightning__text-action">
       <h3>Subscribe to our Newsletter</h3>
       <p>Available exclusivery on Figmaland</p>
       <input
