--- a/index.section-partners.partial.html
+++ b/index.section-partners.partial.html
@@ -1,10 +1,13 @@
 <div class="partners">
-  <h2>Partners</h2>
-  <h4>
-    Most calendars are designed for teams. Slate is designed for freelancers
-  </h4>
-  <div class="partners-items">
-    <div class="partners-items-row-top">
+  <div class="partners__text-container">
+    <h2>Partners</h2>
+    <h4>
+      Most calendars are designed for teams. Slate is designed for freelancers
+    </h4>
+  </div>
+
+  <div class="partners__items">
+    <div class="partners__items-row-top">
       <div class="google">
         <h6>Client Name</h6>
         <svg
@@ -60,7 +63,7 @@
         <img src="img/uber.png" alt="Uber logo" />
       </div>
     </div>
-    <div class="partners-items-row-bottom">
+    <div class="partners__items-row-bottom">
       <div class="dropbox">
         <h6>Client Name</h6>
         <img src="img/dropbox.png" alt="Dropbox logo" />
@@ -117,7 +120,7 @@
       </div>
     </div>
   </div>
-  <div class="partners-action">
+  <div class="partners__action">
     <button>Try For Free</button>
   </div>
 </div>
