--- a/index.section-pricing.partial.html
+++ b/index.section-pricing.partial.html
@@ -1,24 +1,24 @@
 <div class="pricing">
-  <div class="pricing-text-content">
+  <div class="pricing__text-container">
     <h2>Pricing</h2>
     <h4>
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
   </div>
-  <div class="pricing-items-content">
-    <div class="free">
-      <div class="free-heading">
+  <div class="pricing__items">
+    <div class="pricing__item-free">
+      <div class="pricing__free-heading">
         <h3>FREE</h3>
         <h6>Organize across all apps by hand</h6>
       </div>
-      <div class="free-pricing">
+      <div class="pricing__free-price">
         <h1>0</h1>
-        <div class="free-pricing-block">
+        <div class="pricing__free-pricing-block">
           <h3>$</h3>
           <h6>Per Month</h6>
         </div>
       </div>
-      <ul class="free-list">
+      <ul class="pricing__free-list">
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
@@ -27,19 +27,19 @@
       </ul>
       <button>Order Now</button>
     </div>
-    <div class="standard">
-      <div class="standard-heading">
+    <div class="pricing__item-standard">
+      <div class="pricing__standard-heading">
         <h3>STANDARD</h3>
         <h6>Organize across all apps by hand</h6>
       </div>
-      <div class="standard-pricing">
+      <div class="pricing__standard-price">
         <h1>10</h1>
-        <div class="standard-pricing-block">
+        <div class="pricing__standard-pricing-block">
           <h3>$</h3>
           <h6>Per Month</h6>
         </div>
       </div>
-      <ul class="standard-list">
+      <ul class="pricing__standard-list">
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
@@ -48,19 +48,19 @@
       </ul>
       <button>Order Now</button>
     </div>
-    <div class="business">
-      <div class="business-heading">
+    <div class="pricing__item-business">
+      <div class="pricing__business-heading">
         <h3>BUSINESS</h3>
         <h6>Organize across all apps by hand</h6>
       </div>
-      <div class="business-pricing">
+      <div class="pricing__business-pricing">
         <h1>99</h1>
-        <div class="business-pricing-block">
+        <div class="pricing__business-pricing-block">
           <h3>$</h3>
           <h6>Per Month</h6>
         </div>
       </div>
-      <ul class="business-list">
+      <ul class="pricing__business-list">
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
         <li>Pricing Feature</li>
