--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -1,6 +1,6 @@
 <div class="testimonials">
   <h2>Testimonials</h2>
-  <div class="testimonials-logo">
+  <div class="testimonials__logo">
     <svg
       width="150"
       height="60"
@@ -18,16 +18,16 @@
     Most calendars are designed for teams. Slate is designed for freelancers who
     want a simple way to plan their schedule.
   </h4>
-  <div class="testimonals-client-content">
+  <div class="testimonials__client-content">
     <img
-      class="testimonials-client-avatar"
+      class="testimonials__client-content-avatar"
       src="img/testimonials-avatar.png"
       alt="Client avatar"
     />
-    <div class="testimonials-client-text">
+    <div class="testimonials__client-content-text">
       <h6>Organize across</h6>
       <p>Ui designer</p>
     </div>
   </div>
-  <button>More Testimonials</button>
+  <button class="testimonials__btn">More Testimonials</button>
 </div>
