--- a/global.header.hero.partial.html
+++ b/global.header.hero.partial.html
@@ -1,17 +1,17 @@
 <nav class="header">
   <img width="400px" src="img/header-photo.jpg" alt="Background image"/>
-  <nav class="navbar">
-    <div class="menu">
+  <nav class="header__navbar">
+    <div class="header__navbar-menu">
       <a href="#">Home</a>
       <a href="#">Product</a>
       <a href="#">Pricing</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
     </div>
-    <div class="logo-center">
+    <div class="header__navbar-logo">
       <img src="img/logo.png" alt="Logo" />
     </div>
-    <div class="social-media-right">
+    <div class="header__navbar-social">
       <svg
         width="34"
         height="28"
@@ -50,7 +50,7 @@
       </svg>
     </div>
   </nav>
-  <div class="hero">
+  <div class="header__hero">
     <h1>The best products start with Figma</h1>
     <h4>
       Most calendars are designed for teams. Slate is designed for freelancers
