--- a/index.section-features.partial.html
+++ b/index.section-features.partial.html
@@ -1,66 +1,77 @@
 <div class="features">
   <div class="features__text-center">
-    <h2>Features</h2>
-    <h4>
+    <h2 class="features__text-center-title">Features</h2>
+    <h4 class="features__text-center-description">
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
   </div>
 
   <div class="features__text-row">
     <div class="features__text-row-fonts">
-      <svg
-        width="46"
-        height="46"
-        viewBox="0 0 46 46"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M13.9792 0C17.6867 0 21.2423 1.4728 23.8639 4.0944C26.4855 6.71601 27.9583 10.2717 27.9583 13.9792C27.9583 17.3596 26.7638 20.4604 24.7558 22.875H45.75V45.75H22.875V24.7558C20.4604 26.7638 17.3596 27.9583 13.9792 27.9583C10.2717 27.9583 6.71601 26.4855 4.0944 23.8639C1.4728 21.2423 0 17.6867 0 13.9792C0 10.2717 1.4728 6.71601 4.0944 4.0944C6.71601 1.4728 10.2717 0 13.9792 0Z"
-          fill="#2091F9"
-        />
-      </svg>
-      <h3>OpenType features Variable fonts</h3>
-      <p>
+      <div class="features__text-row-fonts-icon">
+        <svg
+          width="46"
+          height="46"
+          viewBox="0 0 46 46"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M13.9792 0C17.6867 0 21.2423 1.4728 23.8639 4.0944C26.4855 6.71601 27.9583 10.2717 27.9583 13.9792C27.9583 17.3596 26.7638 20.4604 24.7558 22.875H45.75V45.75H22.875V24.7558C20.4604 26.7638 17.3596 27.9583 13.9792 27.9583C10.2717 27.9583 6.71601 26.4855 4.0944 23.8639C1.4728 21.2423 0 17.6867 0 13.9792C0 10.2717 1.4728 6.71601 4.0944 4.0944C6.71601 1.4728 10.2717 0 13.9792 0Z"
+            fill="#2091F9"
+          />
+        </svg>
+      </div>
+      <h3 class="features__text-row-fonts-title">
+        OpenType features Variable fonts
+      </h3>
+      <p class="features__text-row-fonts-description">
         Slate helps you see how many more days you need to work to reach your
         financial goal.
       </p>
     </div>
     <div class="features__text-row-design">
-      <svg
-        width="45"
-        height="42"
-        viewBox="0 0 45 42"
-        fill="none"
-        _
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M18.0807 41.6438C22.234 40.0105 21.324 35.5071 19.224 32.6605C17.1473 29.7438 14.2773 27.7371 11.384 25.8005C9.31959 24.4993 7.47635 22.8766 5.924 20.9938C5.27067 20.2238 3.94067 18.8005 5.294 18.5205C6.67067 18.2405 9.05067 19.5938 10.264 20.1071C12.3873 20.9938 14.4873 22.0205 16.4473 23.2338L18.804 19.2671C15.164 16.8638 10.4973 14.7405 6.15733 14.1105C3.684 13.7371 1.07067 14.2505 0.230665 16.9338C-0.516002 19.2438 0.673998 21.5771 2.02733 23.3971C5.224 27.6671 10.194 29.7205 13.904 33.4071C14.6973 34.1771 15.654 35.0871 16.1207 36.1605C16.6107 37.1871 16.494 37.2571 15.3973 37.2571C12.504 37.2571 8.88733 34.9938 6.53067 33.5005L4.174 37.4671C7.744 39.6605 13.7173 43.0905 18.0807 41.6438ZM43.9573 5.24381C44.4707 4.73048 44.4707 3.89048 43.9573 3.40048L40.924 0.367143C40.6796 0.131605 40.3534 0 40.014 0C39.6746 0 39.3484 0.131605 39.104 0.367143L36.724 2.74714L41.5773 7.60048L43.9573 5.24381ZM20.9973 18.4738V23.3271H25.8507L40.2007 8.97714L35.3473 4.12381L20.9973 18.4738Z"
-          fill="#2091F9"
-        />
-      </svg>
-      <h3>Design with real data</h3>
-      <p>
+      <div class="features__text-row-design-icon">
+        <svg
+          width="45"
+          height="42"
+          viewBox="0 0 45 42"
+          fill="none"
+          _
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M18.0807 41.6438C22.234 40.0105 21.324 35.5071 19.224 32.6605C17.1473 29.7438 14.2773 27.7371 11.384 25.8005C9.31959 24.4993 7.47635 22.8766 5.924 20.9938C5.27067 20.2238 3.94067 18.8005 5.294 18.5205C6.67067 18.2405 9.05067 19.5938 10.264 20.1071C12.3873 20.9938 14.4873 22.0205 16.4473 23.2338L18.804 19.2671C15.164 16.8638 10.4973 14.7405 6.15733 14.1105C3.684 13.7371 1.07067 14.2505 0.230665 16.9338C-0.516002 19.2438 0.673998 21.5771 2.02733 23.3971C5.224 27.6671 10.194 29.7205 13.904 33.4071C14.6973 34.1771 15.654 35.0871 16.1207 36.1605C16.6107 37.1871 16.494 37.2571 15.3973 37.2571C12.504 37.2571 8.88733 34.9938 6.53067 33.5005L4.174 37.4671C7.744 39.6605 13.7173 43.0905 18.0807 41.6438ZM43.9573 5.24381C44.4707 4.73048 44.4707 3.89048 43.9573 3.40048L40.924 0.367143C40.6796 0.131605 40.3534 0 40.014 0C39.6746 0 39.3484 0.131605 39.104 0.367143L36.724 2.74714L41.5773 7.60048L43.9573 5.24381ZM20.9973 18.4738V23.3271H25.8507L40.2007 8.97714L35.3473 4.12381L20.9973 18.4738Z"
+            fill="#2091F9"
+          />
+        </svg>
+      </div>
+      <h3 class="features__text-row-design-title">Design with real data</h3>
+      <p class="features__text-row-design-description">
         Slate helps you see how many more days you need to work to reach your
         financial goal.
       </p>
     </div>
     <div class="features__text-row-fastest">
-      <svg
-        width="49"
-        height="46"
-        viewBox="0 0 49 46"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M47.5546 4.14927L44.1488 0.743437C43.2083 -0.247812 41.5562 -0.247812 40.565 0.743437L17.7917 23.5168L24.7812 30.5064L47.5546 7.73302C48.5458 6.74177 48.5458 5.08969 47.5546 4.14927ZM12.7083 27.9647C10.6861 27.9647 8.74661 28.768 7.31664 30.198C5.88668 31.628 5.08333 33.5674 5.08333 35.5897C5.08333 38.9193 2.135 40.673 0 40.673C2.33833 43.7739 6.35417 45.7564 10.1667 45.7564C12.863 45.7564 15.449 44.6852 17.3556 42.7786C19.2622 40.872 20.3333 38.2861 20.3333 35.5897C20.3333 33.5674 19.53 31.628 18.1 30.198C16.6701 28.768 14.7306 27.9647 12.7083 27.9647Z"
-          fill="#2091F9"
-        />
-      </svg>
-      <h3>Fastest way to take action</h3>
-      <p>
+      <div class="features__text-row-fastest-icon">
+        <svg
+          width="49"
+          height="46"
+          viewBox="0 0 49 46"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M47.5546 4.14927L44.1488 0.743437C43.2083 -0.247812 41.5562 -0.247812 40.565 0.743437L17.7917 23.5168L24.7812 30.5064L47.5546 7.73302C48.5458 6.74177 48.5458 5.08969 47.5546 4.14927ZM12.7083 27.9647C10.6861 27.9647 8.74661 28.768 7.31664 30.198C5.88668 31.628 5.08333 33.5674 5.08333 35.5897C5.08333 38.9193 2.135 40.673 0 40.673C2.33833 43.7739 6.35417 45.7564 10.1667 45.7564C12.863 45.7564 15.449 44.6852 17.3556 42.7786C19.2622 40.872 20.3333 38.2861 20.3333 35.5897C20.3333 33.5674 19.53 31.628 18.1 30.198C16.6701 28.768 14.7306 27.9647 12.7083 27.9647Z"
+            fill="#2091F9"
+          />
+        </svg>
+      </div>
+
+      <h3 class="features__text-row-fastest-title">
+        Fastest way to take action
+      </h3>
+      <p class="features__text-row-fastest-description">
         Slate helps you see how many more days you need to work to reach your
         financial goal.
       </p>
