--- a/index.section-pricing.partial.html
+++ b/index.section-pricing.partial.html
@@ -1,73 +1,79 @@
 <div class="pricing">
-  <div class="pricing__text-container">
-    <h2>Pricing</h2>
-    <h4>
+  <div class="pricing__text">
+    <h2 class="pricing__text-title">Pricing</h2>
+    <h4 class="pricing__text-description">
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
   </div>
   <div class="pricing__items">
     <div class="pricing__item-free">
       <div class="pricing__free-heading">
-        <h3>FREE</h3>
-        <h6>Organize across all apps by hand</h6>
+        <h3 class="pricing__free-heading-title">FREE</h3>
+        <h6 class="pricing__free-heading-description">
+          Organize across all apps by hand
+        </h6>
       </div>
       <div class="pricing__free-price">
-        <h1>0</h1>
-        <div class="pricing__free-pricing-block">
-          <h3>$</h3>
-          <h6>Per Month</h6>
+        <h1 class="pricing__free-price-title">0</h1>
+        <div class="pricing__free-block">
+          <h3 class="pricing__free-block-currency">$</h3>
+          <h6 class="pricing__free-block-description">Per Month</h6>
         </div>
       </div>
       <ul class="pricing__free-list">
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
+        <li class="pricing__free-list-item">Pricing Feature</li>
+        <li class="pricing__free-list-item">Pricing Feature</li>
+        <li class="pricing__free-list-item">Pricing Feature</li>
+        <li class="pricing__free-list-item">Pricing Feature</li>
+        <li class="pricing__free-list-item">Pricing Feature</li>
       </ul>
-      <button>Order Now</button>
+      <button class="pricing__order-button">Order Now</button>
     </div>
     <div class="pricing__item-standard">
       <div class="pricing__standard-heading">
-        <h3>STANDARD</h3>
-        <h6>Organize across all apps by hand</h6>
+        <h3 class="pricing__standard-heading-title">STANDARD</h3>
+        <h6 class="pricing__standard-heading-description">
+          Organize across all apps by hand
+        </h6>
       </div>
       <div class="pricing__standard-price">
-        <h1>10</h1>
-        <div class="pricing__standard-pricing-block">
-          <h3>$</h3>
-          <h6>Per Month</h6>
+        <h1 class="pricing__standard-price-title">10</h1>
+        <div class="pricing__standard-block">
+          <h3 class="pricing__standard-block-currency">$</h3>
+          <h6 class="pricing__standard-block-description">Per Month</h6>
         </div>
       </div>
       <ul class="pricing__standard-list">
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
+        <li class="pricing__standard-list-item">Pricing Feature</li>
+        <li class="pricing__standard-list-item">Pricing Feature</li>
+        <li class="pricing__standard-list-item">Pricing Feature</li>
+        <li class="pricing__standard-list-item">Pricing Feature</li>
+        <li class="pricing__standard-list-item">Pricing Feature</li>
       </ul>
-      <button>Order Now</button>
+      <button class="pricing__order-button">Order Now</button>
     </div>
     <div class="pricing__item-business">
       <div class="pricing__business-heading">
-        <h3>BUSINESS</h3>
-        <h6>Organize across all apps by hand</h6>
+        <h3 class="pricing__business-heading-title">BUSINESS</h3>
+        <h6 class="pricing__business-heading-description">
+          Organize across all apps by hand
+        </h6>
       </div>
       <div class="pricing__business-pricing">
-        <h1>99</h1>
-        <div class="pricing__business-pricing-block">
-          <h3>$</h3>
-          <h6>Per Month</h6>
+        <h1 class="pricing__business-price-title">99</h1>
+        <div class="pricing__business-block">
+          <h3 class="pricing__business-block-currency">$</h3>
+          <h6 class="pricing__business-block-description">Per Month</h6>
         </div>
       </div>
       <ul class="pricing__business-list">
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
-        <li>Pricing Feature</li>
+        <li class="pricing__business-list-item">Pricing Feature</li>
+        <li class="pricing__business-list-item">Pricing Feature</li>
+        <li class="pricing__business-list-item">Pricing Feature</li>
+        <li class="pricing__business-list-item">Pricing Feature</li>
+        <li class="pricing__business-list-item">Pricing Feature</li>
       </ul>
-      <button>Order Now</button>
+      <button class="pricing__order-button">Order Now</button>
     </div>
   </div>
 </div>
