--- a/index.section-testimonials.partial.html
+++ b/index.section-testimonials.partial.html
@@ -1,5 +1,5 @@
 <div class="testimonials">
-  <h2>Testimonials</h2>
+  <h2 class="testimonials__title">Testimonials</h2>
   <div class="testimonials__logo">
     <svg
       width="150"
@@ -14,20 +14,22 @@
       />
     </svg>
   </div>
-  <h4>
+  <h4 class="testimonials__description">
     Most calendars are designed for teams. Slate is designed for freelancers who
     want a simple way to plan their schedule.
   </h4>
   <div class="testimonials__client-content">
-    <img
-      class="testimonials__client-content-avatar"
-      src="img/testimonials-avatar.png"
-      alt="Client avatar"
-    />
+    <div class="testimonials__client-content-photo">
+      <img
+        class="testimonials__client-content-avatar"
+        src="img/testimonials-avatar.png"
+        alt="Client avatar"
+      />
+    </div>
     <div class="testimonials__client-content-text">
-      <h6>Organize across</h6>
-      <p>Ui designer</p>
+      <h6 class="testimonials__client-content-text-name">Organize across</h6>
+      <p class="testimonials__client-content-text-position">Ui designer</p>
     </div>
   </div>
-  <button class="testimonials__btn">More Testimonials</button>
+  <button class="testimonials__button">More Testimonials</button>
 </div>
