--- a/index.section-fastest-way.partial.html
+++ b/index.section-fastest-way.partial.html
@@ -1,10 +1,10 @@
 <div class="fastest">
   <div class="fastest__text-content">
-    <h2>Fastest way to organize</h2>
-    <h4>
+    <h2 class="fastest__text-title">Fastest way to organize</h2>
+    <h4 class="fastest__text-description">
       Most calendars are designed for teams. Slate is designed for freelancers
     </h4>
-    <button>Try For Free</button>
+    <button class="fastest__text-button">Try For Free</button>
   </div>
   <div class="fastest__svg-content">
     <svg
