--- a/global.header.hero.partial.html
+++ b/global.header.hero.partial.html
@@ -1,5 +1,5 @@
 <nav class="header">
-  <img width="400px" src="img/header-photo.jpg" alt="Background image" />
+  <img class="header__background-img" src="img/header-photo.jpg" alt="Background image" />
   <nav class="header__navbar">
     <div class="header__navbar-menu">
       <a class="header__navbar-menu-home" href="#">Home</a>
