Create css styles

--- a/global.header.hero.partial.html
+++ b/global.header.hero.partial.html
@@ -1,18 +1,17 @@
 <nav class="header">
-  <img class="header__background-img" src="img/header-photo.jpg" alt="Background image" />
   <nav class="header__navbar">
     <div class="header__navbar-menu">
-      <a class="header__navbar-menu-home" href="#">Home</a>
-      <a class="header__navbar-menu-product" href="#">Product</a>
-      <a class="header__navbar-menu-pricing" href="#">Pricing</a>
-      <a class="header__navbar-menu-about" href="#">About</a>
-      <a class="header__navbar-menu-contact" href="#">Contact</a>
+      <a href="#">Home</a>
+      <a href="#">Product</a>
+      <a href="#">Pricing</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </div>
     <div class="header__navbar-logo">
       <img src="img/logo.png" alt="Logo" />
     </div>
     <div class="header__navbar-social">
-      <div class="header__navbar-social-twitter">
+      <a class="header__navbar-social-twitter" href="#">
         <svg
           width="34"
           height="28"
@@ -25,8 +24,8 @@
             fill="white"
           />
         </svg>
-      </div>
-      <div class="header__navbar-social-facebook">
+      </a>
+      <a class="header__navbar-social-facebook" href="#">
         <svg
           width="33"
           height="33"
@@ -39,8 +38,8 @@
             fill="white"
           />
         </svg>
-      </div>
-      <div class="header__navbar-social-linkedin">
+      </a>
+      <a class="header__navbar-social-linkedin" href="#">
         <svg
           width="33"
           height="33"
@@ -53,10 +52,10 @@
             fill="white"
           />
         </svg>
-      </div>
+      </a>
     </div>
   </nav>
-  <div class="header__hero">
+  <div class="header__hero container">
     <h1 class="header__hero-title">The best products start with Figma</h1>
     <h4 class="header__hero-text">
       Most calendars are designed for teams. Slate is designed for freelancers
