--- a/global.header.hero.partial.html
+++ b/global.header.hero.partial.html
@@ -55,7 +55,7 @@
       </a>
     </div>
   </nav>
-  <div class="header__hero container">
+  <div class="header__hero">
     <h1 class="header__hero-title">The best products start with Figma</h1>
     <h4 class="header__hero-text">
       Most calendars are designed for teams. Slate is designed for freelancers
