--- a/index.section-lightning-fast-prototyping.partial.html
+++ b/index.section-lightning-fast-prototyping.partial.html
@@ -343,19 +343,23 @@
   <div class="lightning__text-container">
     <div class="lightning__text-content">
       <h3 class="lightning__text-content-fingertips">At your fingertips</h3>
-      <h2 class="lightning__text-content-prototyping">Lightning fast prototyping</h2>
+      <h2 class="lightning__text-content-prototyping">
+        Lightning fast prototyping
+      </h2>
     </div>
     <div class="lightning__text-action">
       <h3 class="lightning__text-action-title">Subscribe to our Newsletter</h3>
-      <p class="lightning__text-action-description">Available exclusivery on Figmaland</p>
-      <input
-      class="lightning__text-action-input"
-        type="email"
-        name="email"
-        id="email-input"
-        placeholder="Your Email"
-      />
-      <button class="lightning__text-action-button">Subscribe</button>
-    </div>
+      <p class="lightning__text-action-description">
+        Available exclusivery on Figmaland
+      </p>
+        <input
+          class="lightning__text-action-input"
+          type="email"
+          name="email"
+          id="email-input"
+          placeholder="Your Email"
+        />
+        <button class="lightning__text-action-button">Subscribe</button>
+      </div>
   </div>
 </div>
